--- a/dt354/src/main/resources/templates/employees_all.html
+++ b/dt354/src/main/resources/templates/employees_all.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorator="layout">
 <head>
-<title>DT354 Bistro</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.2.0/css/bootstrap.min.css"
-      th:href="@{/webjars/bootstrap/3.2.0/css/bootstrap.min.css}"
-      rel="stylesheet" media="screen" />
-<script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.min.js"
-        th:src="@{/webjars/jquery/2.1.1/jquery.min.js}"></script>
+<title>Employees</title>
 </head>
 <body>
-	<div class="container">
+	<div layout:fragment="content">
 		<h1>Listing All Employees</h1>
+		<p th:text="'There are ' + ${count} + ' employees in the database!'">Well, this isn't working</p>
 		<table class="table table-hover">
 			<thead>
 				<tr>
-				<th>NO</th>
-				<th>CODE</th>
-				<th>NAME</th>
-				<th>EMAIL</th>
-				<th>PHONE</th>
-				<th>POSITION</th>
-			</tr>
+					<th>NO</th>
+					<th>CODE</th>
+					<th>NAME</th>
+					<th>EMAIL</th>
+					<th>PHONE</th>
+					<th>POSITION</th>
+				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="emp,iterationStatus  : ${employees}">
-				<td th:text="${iterationStatus.count}">1</td>
-				<td th:text="${emp.code}">0000</td>
-				<td th:text="${emp.name}">Name</td>
-				<td th:text="${emp.email}">email@email.ie</td>
-				<td th:text="${emp.phone}">012223334</td>
-				<td th:text="${emp.position}">NA</td>
-			</tr>
+					<td th:text="${iterationStatus.count}">1</td>
+					<td th:text="${emp.code}">0000</td>
+					<td th:text="${emp.name}">Name</td>
+					<td th:text="${emp.email}">email@email.ie</td>
+					<td th:text="${emp.phone}">012223334</td>
+					<td th:text="${emp.position}">NA</td>
+				</tr>
 			</tbody>
 		</table>
 		<div>
-			<a class='nostyle' href='http://localhost:8080/employees/add'>
-    			<span class="btn btn-default">Add Employee</span>
+			<a class='nostyle' href='http://localhost:8080/employees/add'> <span
+				class="btn btn-default">Add Employee</span>
 			</a>
 		</div>
 	</div>
