--- a/dt354/src/main/resources/templates/index.html
+++ b/dt354/src/main/resources/templates/index.html
@@ -1,26 +1,42 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorator="layout">
 <head>
-<title>DT354 Bistro</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.2.0/css/bootstrap.min.css"
-      th:href="@{/webjars/bootstrap/3.2.0/css/bootstrap.min.css}"
-      rel="stylesheet" media="screen" />
-<script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.min.js"
-        th:src="@{/webjars/jquery/2.1.1/jquery.min.js}"></script>
-<script type="text/javascript">
-        $(document).ready(function() {
-            $('h1').animate({
-                fontSize: '48px'
-            }, "slow");
-        });
-    </script>
+<title>Welcome</title>
 </head>
 <body>
-	<div class="container">
-		<h1 th:text="'Hi there, ' + ${emp0.name} + '!'" />
-		<h2>Welcome to Spring Boot and Thymeleaf </h2>
-		<p th:text="'There are ' + ${count} + ' employee on record.'" />
+	<div layout:fragment="content">
+		<div class="notice-good">
+			<p th:text="${messageG}">Notice</p>
+		</div>
+		<div class="error">
+			<p th:text="${messageB}">Notice</p>
+		</div>
+		<h1>Welcome to Spring Boot and Thymeleaf </h1>
+		<h2>Please Signup or Signin to continue</h2>
+		<h3>Signup</h3>
+		<form role="form" action="#" th:action="@{/signup}"
+			th:object="${user}" method="POST">
+			<fieldset class="form-group">
+				<label for="email">Email: </label> 
+				<input type="email" th:field="*{email}" class="form-control" id="email" placeholder="Enter email" /> 
+				<small class="text-muted">Make sure you use the registered email.</small>
+			</fieldset>
+			<fieldset class="form-group">
+				<label for="password">Password: </label> 
+				<input type="password" th:field="*{password}" class="form-control" id="password" placeholder="Enter Password" /> 
+				<small class="text-muted">Must be at least 6 characters long.</small>
+			</fieldset>
+			<fieldset class="form-group">
+				<label for="password2">Confirm Password: </label> 
+				<input type="password" th:field="*{password2}" class="form-control" id="password2" placeholder="Retype Password" />
+			</fieldset>
+			<fieldset class="form-group">
+				<input type="submit" value="Register" class="btn btn-success" /> 
+				<input type="reset" value="Clear" class="btn btn-default" />
+			</fieldset>
+		</form>
 	</div>
 </body>
 </html>
