--- a/dt354/src/main/resources/templates/employees_all.html
+++ b/dt354/src/main/resources/templates/employees_all.html
@@ -32,7 +32,7 @@
 			</tbody>
 		</table>
 		<div>
-			<a class='nostyle' href='http://localhost:8080/employees/add'> <span
+			<a class='nostyle' href='http://localhost:8080/employees/new'> <span
 				class="btn btn-default">Add Employee</span>
 			</a>
 		</div>
