--- a/dt354/src/main/resources/static/css/app.css
+++ b/dt354/src/main/resources/static/css/app.css
@@ -2,12 +2,21 @@ p {
 	color: green;
 }
 
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+.header {
+   padding:10px;
+}
+
 .panel-footer {
-	position : absolute;
-	bottom : 0;
-	width : 100%;
-	padding-left : 20%;
-	padding-top : 20px;
+   position:relative;
+   bottom:0;
+   width:100%;
+   padding-top:20px;
+   padding-left:10%;
 }
 
 .notice-good {
@@ -16,4 +25,14 @@ p {
 
 .error {
 	color: red;
+}
+
+thead {
+	background-color: black;
+	color: white;
+}
+
+form {
+	width: 40%;
+	position: relative;
 }
