--- a/dt354/src/main/resources/templates/employees_all.html
+++ b/dt354/src/main/resources/templates/employees_all.html
@@ -9,7 +9,7 @@
 	<div layout:fragment="content">
 		<h1>Listing All Employees</h1>
 		<p th:text="'There are ' + ${count} + ' employees in the database!'">Well, this isn't working</p>
-		<table class="table table-hover">
+		<table class="table table-bordered table-hover">
 			<thead>
 				<tr>
 					<th>NO</th>
