--- a/dt354/src/main/resources/templates/layout.html
+++ b/dt354/src/main/resources/templates/layout.html
@@ -18,8 +18,11 @@
 <script type="text/javascript" src="../js/app.js" th:src="@{/js/app.js}"></script>
 </head>
 <body>
-	<div th:replace="headers :: header_welcome"></div>
-	<div class="panel-body">
+	<div class="header">
+		<div th:replace="headers :: header_welcome"></div>
+	</div>
+	<div class="body">
+		<div class="panel-body">
 		<div class="container">
 			<div th:if="${message}" class="notice">
 				<h2 th:text="${message}" />
@@ -27,10 +30,13 @@
 			<div layout:fragment="content"></div>
 		</div>
 	</div>
-	<div class="panel-footer">
+	</div>
+	<div class="footer">
+		<div class="panel-footer">
 		<div th:replace="footers :: footer_all">
 			<p>Henry Patrick Karugendo</p>
 		</div>
+	</div>
 	</div>
 </body>
 </html>
